--- a/package.json
+++ b/package.json
@@ -17,5 +17,15 @@
   "bugs": {
     "url": "https://github.com/ryanbarr/movie-db/issues"
   },
-  "homepage": "https://github.com/ryanbarr/movie-db#readme"
+  "homepage": "https://github.com/ryanbarr/movie-db#readme",
+  "dependencies": {
+    "next": "^9.3.5",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
+  },
+  "devDependencies": {
+    "@types/node": "^13.11.1",
+    "@types/react": "^16.9.34",
+    "typescript": "^3.8.3"
+  }
 }
