--- a/package.json
+++ b/package.json
@@ -26,6 +26,13 @@
   "devDependencies": {
     "@types/node": "^13.11.1",
     "@types/react": "^16.9.34",
+    "bootstrap": "^4.4.1",
+    "fibers": "^4.0.2",
+    "jquery": "^3.5.0",
+    "node-sass": "^4.13.1",
+    "popper.js": "^1.16.1",
+    "react-bootstrap": "^1.0.0",
+    "sass": "^1.26.3",
     "typescript": "^3.8.3"
   }
 }
