--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "next": "^9.3.5",
+    "node-fetch": "^2.6.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
     "@types/node": "^13.11.1",
+    "@types/node-fetch": "^2.5.6",
     "@types/react": "^16.9.34",
     "bootstrap": "^4.4.1",
     "fibers": "^4.0.2",
