--- a/package.json
+++ b/package.json
@@ -19,22 +19,25 @@
   },
   "homepage": "https://github.com/ryanbarr/movie-db#readme",
   "dependencies": {
+    "cross-fetch": "^3.0.4",
     "dotenv": "^8.2.0",
     "next": "^9.3.5",
-    "node-fetch": "^2.6.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
     "@types/node": "^13.11.1",
-    "@types/node-fetch": "^2.5.6",
     "@types/react": "^16.9.34",
+    "@types/react-redux": "^7.1.7",
     "bootstrap": "^4.4.1",
     "fibers": "^4.0.2",
     "jquery": "^3.5.0",
     "node-sass": "^4.13.1",
     "popper.js": "^1.16.1",
     "react-bootstrap": "^1.0.0",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "sass": "^1.26.3",
     "typescript": "^3.8.3"
   }
